# token-hunger

./: .env.template  .gitignore  Dockerfile  LICENSE  LICENSE.priors  METHODOLOGY.md  README.md  pyproject.toml  railpack.json  requirements.txt
.github/workflows/: ci.yml
docs/: CAPABILITIES.md  CONNECTORS.md  PRIORS.md  PRODUCT_BRIEF.md  ROADMAP.md
examples/: fable-roast.yaml  self-hosted-ollama.yaml
examples/deploy/: README.md
examples/offline/: classify.py  demo.yaml
examples/qualitymax/: README.md  cost.calibrate.yaml  cost.pull.yaml  crawl.label.yaml  crawl.pull.yaml  judge.py  label.yaml  mvp.sh  pull.yaml  quality.pull.yaml  quality.run.yaml  review.grade.yaml  review.pull.yaml  semantic.yaml
examples/qualitymax/data/: qualitymax_crawls.jsonl
examples/sandbox/: e2b.yaml
scripts/: pull_qm_demo.py
src/costbench/: __init__.py  __main__.py  analyze.py  calibration.py  checks.py  cli.py  config.py  connectors.py  estimate.py  history.py  limits.py  limits_gate.py  model_limits.yaml  models.py  models.yaml  pricing.py  pricing.yaml  priors.py  priors.yaml  report.py  runner.py  server.py  sources.py  suggest_cases.py  targets.py  tokens.py  ui_examples.py
src/costbench/examples/: classification.yaml
src/costbench/ui/: api.js  app.jsx  costbench.html  helpers.jsx  results.jsx  sections.jsx  styles.css
tests/: test_analyze.py  test_calibration.py  test_checks.py  test_cli_pull.py  test_cli_run.py  test_cli_suggest.py  test_config.py  test_connectors.py  test_dotenv.py  test_estimate.py  test_history.py  test_models.py  test_pricing.py  test_priors.py  test_report.py  test_run_cost_and_limits.py  test_runner.py  test_runner_partial_cost.py  test_server.py  test_sources.py  test_suggest_cases.py  test_targets.py  test_tokens.py  test_ui_examples.py
