[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costbench"
version = "0.1.0"
description = "Benchmark any LLM target by cost per successful outcome — not cost per token."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "costbench contributors" }]
keywords = ["llm", "benchmark", "cost", "eval", "tokens", "openai", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]

# Kept deliberately small so `pip install` is fast and the 10-minute flow holds.
# litellm/httpx are lazily imported and only needed for `model` / `endpoint` targets.
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
models = ["litellm>=1.40"]
endpoint = ["httpx>=0.27"]
all = ["litellm>=1.40", "httpx>=0.27"]
dev = ["pytest>=8.0", "litellm>=1.40", "httpx>=0.27"]

[project.scripts]
costbench = "costbench.cli:main"

[project.urls]
Homepage = "https://github.com/Desperado/token-hunger"
Methodology = "https://github.com/Desperado/token-hunger/blob/master/METHODOLOGY.md"

[tool.hatch.build.targets.wheel]
packages = ["src/costbench"]

[tool.hatch.build.targets.wheel.force-include]
"src/costbench/pricing.yaml" = "costbench/pricing.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
