[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costbench"
version = "0.1.0"
description = "Benchmark any LLM target by cost per successful outcome — not cost per token."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "FSL-1.1-ALv2" }
authors = [{ name = "costbench contributors" }]
keywords = ["llm", "benchmark", "cost", "eval", "tokens", "openai", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]

# Kept deliberately small so `pip install` is fast and the 10-minute flow holds.
# litellm/httpx are lazily imported and only needed for `model` / `endpoint` targets.
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
models = ["litellm>=1.40"]
endpoint = ["httpx>=0.27"]
# Run `command` targets in an isolated e2b cloud sandbox (`sandbox: e2b`).
# Lazily imported; needs E2B_API_KEY at run time. Only `command` targets that
# opt in use it — local `command` targets and `run` otherwise never touch it.
e2b = ["e2b>=2.0"]
# Pull cases from a SQL source (`costbench pull` with a `sql` source). Lazily
# imported and only needed by `pull`, never by `run`.
sql = ["psycopg[binary]>=3.1"]
# Optional keyless tokenizers used by `costbench estimate` for billing-grade
# token counts. All are lazily imported; estimate still works (heuristic) without them.
tokenizers = ["tiktoken>=0.7", "mistral-common>=1.4", "deepseek-tokenizer", "transformers>=4.50"]
all = ["litellm>=1.40", "httpx>=0.27", "e2b>=2.0"]
dev = ["pytest>=8.0", "litellm>=1.40", "httpx>=0.27"]

[project.scripts]
costbench = "costbench.cli:main"

[project.urls]
Homepage = "https://github.com/Desperado/token-hunger"
Methodology = "https://github.com/Desperado/token-hunger/blob/master/METHODOLOGY.md"

[tool.hatch.build.targets.wheel]
packages = ["src/costbench"]

[tool.hatch.build.targets.wheel.force-include]
"src/costbench/models.yaml" = "costbench/models.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
